# IA-development

Big Data/r/Práctica lenguaje/: Ejercicio1.R  iris_modificado.csv
BigData/r/Basics_exercises/: ejercicio1.R
BigData/r/Ejercicios básicos/: Ejercico2.R
Python/: binariSearch.py
Python/AWS/: .env
Python/Basics exercices3/: Ejercicio1.py  Ejercicio2.py  Ejercicio3.py  Ejercicio5.py  Ejercicio6.py  Ejercicio7.py  Ejercicio8.py  ejercicio4.py
Python/Basics exercises/: Ejercicio1.py  Ejercicio2.py  Ejercicio3.py  Ejercicio4.py  Ejercicio5.py  Ejercicio6.py  Ejercicio7.py  Ejercicio8.py  Ejercicio9.py
Python/Basics exercises2/: Ejercicio1.py  Ejercicio2.py  Ejercicio3.py  Ejercicio4.py  Ejercicio5.py  Ejercicio6.py  Ejercicio7.py  Ejercicio8.py
Python/Calculator/: Calculator.py
Python/Fibonacci/: fibonacci.py
Python/Rock. paper. scissors/: 01_RPS_Basic.py  02_RPS_Error_Control.py  03_RPS_Clean_Code (1).py  04_RPS_Basic_AI (1).py  05_RPS_More_AI (1).py
Python/telco/: pyproject.toml
Python/telco/deploy/: app.py
Python/telco/models/: churn-model.pck
Python/telco/notebooks/: telcoreg.ipynb
Python/telco/telco/: churn_predict_app.py  churn_predict_service.py
R/: Ejercico1.R  Ejercico3.R  Ejercico4.R  Pablo_R_P.rar
Sistemas/myenv/: pyvenv.cfg
Sistemas/myenv/Scripts/: activate  activate.bat
aws-proyect/: .env  README.md  application.py  detect_text.py  front.py  requirements.txt  translate_text.py
lenguaje_de_marcas/Ejercicio Biblioteca XSLT (1)/: biblioteca.xml  biblioteca1.xsl  biblioteca2.xsl  ejemplo-instrucciones-condicionales.xsl
